--- a/css/Customization.css
+++ b/css/Customization.css
@@ -779,7 +779,7 @@ body {
 #middle_div1_box_div15 {
     width: 50px;
     height: 70px;
-    border: 2px dotted yellow;
+    border: 0px dotted yellow;
     /* border-style: dotted; */
     /* border-style: dotted;
     border-color: rgba(255, 0, 0, 0.5); */
@@ -955,7 +955,7 @@ body {
 
 #menu_below ul {
     display: flex;
-    margin: 11px 28px 0px 28px;
+    margin: 11px 50px 0px 50px;
     border: 0px solid #444;
 }
 
@@ -988,11 +988,13 @@ body {
 } */
 
 #garbage_can {
-    margin: 0 157px;
+    margin: 0 124px;
 }
 
 .menu_below_li {
-    margin: 0 20px;
+    /* margin: 0 20px; */
+    width: 80px;
+    height: 80px;
 }
 
 .menu_below_li a {
@@ -1002,8 +1004,8 @@ body {
 }
 
 .menu_below_li img {
-    width: 52px;
-    height: 52px;
+    /* width: 52px;
+    height: 52px; */
     display: flex;
     justify-content: flex-start;
 
@@ -1080,7 +1082,7 @@ body {
     justify-content: center;
 }
 
-#Prompt_field_img0 img,
+/* #Prompt_field_img0 img, */
 #Prompt_field_img1 img,
 #Prompt_field_img2 img,
 #Prompt_field_img3 img,
@@ -1404,9 +1406,9 @@ body {
 }
 
 #center_display_second_page_box {
-    border: 2px solid #444;
+    border: 0px solid #444;
     position: absolute;
-    left: -50px;
+    left: 165px;
 }
 
 #center_display_second_page_box img {
@@ -1478,7 +1480,7 @@ body {
 
 
 #center_display_second_page_p{
-    border: 2px solid #444;
+    border: 0px solid #444;
     width: 110px;
     height: 110px;
     position: absolute;
