--- a/css/shop2.css
+++ b/css/shop2.css
@@ -119,6 +119,9 @@ section {
 }
 
 /* 篩選列 */
+
+
+
 .filter_list {
     padding: 65px 20px 10px 20px;
 }
@@ -225,14 +228,18 @@ border-bottom:var(--block_brown) solid 2px
 
 
 .items_list {
-    padding: 150px 5vw 50px;
+    margin-top: 10vw;
+    
     width: 100%;
     max-width: 1440px;
     /* ;list通常最大寬度是絕對搭配相對單位,設定絕對單位] */
-    display: flex;
-    flex-wrap: wrap;
-    height: 100%;
-    /* align-content:flex-start; */
+    height: 100%; 
+
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr)); /* 自动调整列数 */
+    gap: 20px; /* 项目之间的间隔 */
+    padding: 20px; /* 容器的内边距 */
+   
 }
 
 .item_wrap {
