--- a/css/shop2.css
+++ b/css/shop2.css
@@ -88,8 +88,8 @@ section {
 }
 
 .img_container {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     background-image: url(../images/shop_images/shop_banner.jpg);
     background-color: transparent;
     background-size: cover;
@@ -102,6 +102,7 @@ section {
     position: relative;
     height: auto;
     background-image: url(../index_images/bg-w.png);
+    
 }
 
 
@@ -228,32 +229,47 @@ border-bottom:var(--block_brown) solid 2px
 
 
 .items_list {
-    margin-top: 10vw;
-    
+    margin-top: 5vw ;
     width: 100%;
-    max-width: 1440px;
-    /* ;list通常最大寬度是絕對搭配相對單位,設定絕對單位] */
+    max-width: 1400px;
     height: 100%; 
-
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr)); /* 自动调整列数 */
-    gap: 20px; /* 项目之间的间隔 */
-    padding: 20px; /* 容器的内边距 */
+    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr)); /* 自动调整列数 */
+    gap: 10px; /* 项目之间的间隔 */
+    padding: 80px ; /* 容器的内边距 */
+    align-self: center;
+    justify-self:center;
+    justify-content: center; /* 水平居中网格 */
+    align-content: center; /* 垂直居中网格 */
+    align-items: center; /* 垂直居中所有网格项 */
+    justify-items: center; /* 水平居中所有网格项 */
    
+}
+@media (max-width: 1175px) {
+    .items_list {
+        padding-left: 170px;
+        padding-right: 170px;
+    }
 }
 
 .item_wrap {
-    flex: 1 1 calc(33.333% - 20px);
-    /* 每行顯示 3 個項目，並考慮間隙 */
-    box-sizing: border-box;
+    /* flex: 1 1 calc(33.333% - 20px);
+     每行顯示 3 個項目，並考慮間隙 */
+    box-sizing: border-box; 
     padding: 40px;
+    width: 380px;
+    max-height: 100%;
 }
+
+
+
 
 .item {
     position: relative;
 
     text-align: start;
     min-width: 200px;
+    
 }
 
 
