--- a/css/Customization.css
+++ b/css/Customization.css
@@ -779,7 +779,7 @@ body {
 #middle_div1_box_div15 {
     width: 50px;
     height: 70px;
-    border: 0px dotted yellow;
+    border: 2px dotted yellow;
     /* border-style: dotted; */
     /* border-style: dotted;
     border-color: rgba(255, 0, 0, 0.5); */
@@ -911,6 +911,11 @@ body {
     }
 }
 
+.middle_box div{
+    border: 2px solid #444;
+    width: 110px;
+    height: 100px;
+}
 
 
 /* ↑↑中間區塊↑↑ */
@@ -1065,6 +1070,8 @@ body {
 }
 
 #Prompt_field_img0 {
+    display: flex;
+    align-items: center;
     cursor: pointer;
 }
 
@@ -1479,7 +1486,7 @@ body {
 }
 
 
-#center_display_second_page_p{
+#center_display_second_page_p {
     border: 0px solid #444;
     width: 110px;
     height: 110px;
@@ -1494,10 +1501,10 @@ body {
 #center_display_second_page_img4,
 #center_display_second_page_img5,
 #center_display_second_page_img6,
-#center_display_second_page_img7{
-width: 440px;
-height: 382px;
-display: none;
+#center_display_second_page_img7 {
+    width: 440px;
+    height: 382px;
+    display: none;
 }
 
 
