--- a/css/Q&A.css
+++ b/css/Q&A.css
@@ -205,9 +205,11 @@ section {
 
     max-height: 0; /* 初始状态 */
     overflow: hidden;
-    transition:   0.3s ease-in-out, height 0.3s ease; /* 展开和收起的过渡效果 */
+    transition:   0.4s ease,  max-height 0.4s ease; /* 展开和收起的过渡效果 */
+    opacity: 0;
 }
 .ans.expanded {    
+    opacity: 1;
     max-height: 500px; /* 设置为一个比内容实际高度大的值 */
 }
 .ans p{
