--- a/css/shop2.css
+++ b/css/shop2.css
@@ -144,9 +144,7 @@ max-width:100px ;
     
 }
 
-#festivalList,#countsList,#priceList,#permutationList {
-  
-}
+
 
 ul.drop-down-menu ul {
     /* border-bottom: #ccc 1px solid; */
@@ -202,19 +200,23 @@ border-bottom:var(--block_brown) solid 2px
     display: flex;
     justify-content: flex-end;
     padding-top: 0.6vh;
+    z-index: 99;
     /* background-color: #E1CBAA; */
 
 }
 
+
+
 .permutation_btn {
-    width: 5vw;
-    max-width: 60px;
+    
+    max-width: 100px;
 }
 
 .permutation_btn img {
+    margin-left: 50px;
     display: block;
     /* 去除底部的空白間隙 */
-    width: 100%;
+    width: 50px;
     height: 100%;
     object-fit: cover;
     /* 確保圖片覆蓋整個容器 */
@@ -222,8 +224,17 @@ border-bottom:var(--block_brown) solid 2px
 
 .permutation_btn ul {
     position: relative;
+    background-color: white;
+    border:3px solid var(--block_brown);
+    font-size: 0.8rem;
 }
-
+.permutation_btn ul>li {
+    font-weight: 900;
+    margin:2px;
+}
+.permutation_btn ul>li:hover {
+    background-color: var(--block_brown);
+}
 
 
 
@@ -302,7 +313,6 @@ border-bottom:var(--block_brown) solid 2px
 
 .item:hover .item_pic img {
     transform: scale(1.06);
-    /* 放大圖片到原來的 110% */
 }
 
 
