--- a/css/index3.css
+++ b/css/index3.css
@@ -170,7 +170,8 @@ section {
 }
 
 .text_all {
-    letter-spacing: .8rem;
+    /* 字間距離 */
+    letter-spacing: .6vw;
     font-weight: bold;
 }
 .cn_title {
@@ -364,10 +365,11 @@ section {
 
 
 #CLASSIC {
-    
-    width: 100%;
-    /* height: 100%; */
-    background-image: url(../index_images/bg-b.png);
+    /* height: 60vw; */
+    /* width: 100%; */
+    height: 60vw;
+    position: relative;
+    background-image: url(../index_images/bg-w.png);
     background-size: cover;
     text-align: center;
     background-repeat: no-repeat;
@@ -375,7 +377,7 @@ section {
     display: flex;
     align-items: center;
     justify-items: center;
-    position: relative;
+    
     
 }
 
@@ -392,7 +394,7 @@ section {
     background-color: var(--block_brown);
     opacity: 0.3;
     width: 60vw;
-    height: 20vw;
+    height: 21vw;
     margin-left: 18vw;
     margin-top: -6vw;
 }
@@ -407,6 +409,7 @@ section {
     /* 将图片作为块级元素 */
     animation: spin 10s linear infinite;
     margin-left: 12vw;
+    margin-top: -10vw;
 }
 
 #CLASSIC .class_right{
@@ -432,20 +435,21 @@ section {
     z-index: 5;
     display: flex;
     color: var(--text);
-    font-size: 1.0vw;
-    align-items: flex-start;
+    font-size: .9vw;
+    align-items: self-start;
     font-style: 'Noto+Sans+TC';
     font-weight: bold;
     /* margin-top: 20vh; */
     margin-right: 5vw;
+    margin-top: -13vw;
 
 
 }
 
 #CLASSIC .text1,
-.text2,
-.text3,
-.text4 {
+#CLASSIC .text2,
+#CLASSIC .text3,
+#CLASSIC .text4 {
     writing-mode: vertical-rl;
     /* 设置文字竖排，从右到左 */
     text-align: start;
@@ -453,21 +457,19 @@ section {
     /* border: 1px solid black;   边框，方便查看效果 */
     padding: 10px;
     /* 内边距 */
-    height: 100%;
-    /* 高度，可以根据需要调整 */
-    width: 50px;
+    
 }
 
 #CLASSIC .text2,
-.text3 {
+#CLASSIC .text3 {
     padding-top: 3rem;
 }
 
 #CLASSIC .title {
     position: absolute;
-    width: 20vw;
-    margin-left: -19vw;
-    margin-top: -7vw;
+    width: 23.5vw;
+    margin-left: -22vw;
+    margin-top: -11.5vw;
     
     z-index: 4;
  
@@ -488,7 +490,7 @@ section {
     position: relative;
     width: 100%;
     /* height: 100%; */
-    background-image: url(../index_images/bg-w.png);
+    background-image: url(../index_images/bg-b.png);
     background-size: cover;
     text-align: center;
     background-repeat: no-repeat;
@@ -559,10 +561,10 @@ section {
 }
 
 #ABOUT .text1,
-.text2,
-.text3,
-.text4,
-.text5 {
+#ABOUT .text2,
+#ABOUT .text3,
+#ABOUT .text4,
+#ABOUT .text5 {
     writing-mode: vertical-rl;
     /* 设置文字竖排，从右到左 */
     text-align: start;
@@ -576,8 +578,8 @@ section {
 }
 
 #ABOUT .text2,
-.text3,
-.text4 {
+#ABOUT .text3,
+#ABOUT .text4 {
     padding-top: 3rem;
 }
 
@@ -680,9 +682,9 @@ section {
 }
 
 #INGREDIENT .text1,
-.text2,
-.text3,
-.text4 {
+#INGREDIENT .text2,
+#INGREDIENT .text3,
+#INGREDIENT .text4 {
     writing-mode: vertical-rl;
     /* 设置文字竖排，从右到左 */
     text-align: start;
@@ -834,9 +836,9 @@ section {
 }
 
 #TASTE .text1,
-.text2,
-.text3,
-.text4 {
+#TASTE .text2,
+#TASTE .text3,
+#TASTE .text4 {
     writing-mode: vertical-rl;
     /* 设置文字竖排，从右到左 */
     text-align: start;
@@ -850,7 +852,7 @@ section {
 }
 
 #TASTE .text2,
-.text3 {
+#TASTE .text3 {
     padding-top: 3rem;
 }
 
@@ -958,9 +960,9 @@ section {
 }
 
 #APPERANCE .text1,
-.text2,
-.text3,
-.text4,.text5 {
+#APPERANCE .text2,
+#APPERANCE .text3,
+#APPERANCE .text4,#APPERANCE .text5 {
     writing-mode: vertical-rl;
     /* 设置文字竖排，从右到左 */
     text-align: start;
