--- a/css/index3.css
+++ b/css/index3.css
@@ -495,23 +495,28 @@ section {
     text-align: center;
     background-repeat: no-repeat;
     background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-#ABOUT .main_pic {
+#ABOUT .about_left {
     position: absolute;
-    z-index: 3;
     width: 30vw;
-    left: 150px;
-    top: 200px;
+    left: 0;
 }
-
 #ABOUT .main_pic {
-    position: absolute;
+    
+    width: 30vw;
+    height: 40vw;
     z-index: 4;
+    margin-left: 10vw;
 }
-
-#ABOUT .title {
+#ABOUT .about_right{
     position: absolute;
+    right: 0;
+}
+#ABOUT .title {
+    
     z-index: 5;
     width: 500px;
     right: 700px;
@@ -520,10 +525,10 @@ section {
 }
 
 #ABOUT .little_bg {
-    position: absolute;
+    
     z-index: 2;
-    background-color: var(--primary_pink);
-    opacity: 0.3;
+    background-color: rgb(248, 238, 238);
+    
     width: 50vw;
     height: 400px;
     top: 280px;
@@ -532,7 +537,7 @@ section {
 }
 
 #ABOUT .circle_title {
-    position: absolute;
+    
     z-index: 1;
     top: 150px;
     right: 150px;
@@ -547,7 +552,7 @@ section {
 
 #ABOUT .text_all {
     z-index: 5;
-    position: absolute;
+    
     top: 30vh;
     left: 50vw;
     display: flex;
