--- a/css/Q&A.css
+++ b/css/Q&A.css
@@ -81,7 +81,7 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    align-content: center;
+    align-content: start;
     height: 100%;
     min-height: 100vh;
     width: 100%;
