--- a/css/Customization.css
+++ b/css/Customization.css
@@ -1681,6 +1681,17 @@ body {
     height: 174px;
 }
 
+#center_display_second_page_box_slab {
+    position: absolute;
+    width: 80%;
+    left: 2%;
+    top: 10%;
+}
+
+#center_display_second_page_box_slab img {
+    width: 100%;
+    height: 100%;
+}
 
 
 #center_display_second_page_card1,
